--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GOOGLE_API_KEY = AIzaSyDuKTBqU7S_1EjAtD4_L4pXHttHRcMPjsc
 GEMINI_API_KEY = AIzaSyDuKTBqU7S_1EjAtD4_L4pXHttHRcMPjsc
+PERSONA_PANEL_PASS=boi
